--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -46,6 +46,10 @@
     background-color: #606468;
   }
 
+  .or {
+    color: white;
+  }
+
   @media (min-width: 320px) and (max-width: 1025px) {
     .intro-section {
       background-image: none;
