--- a/app/views/backend/education/_unit.html.erb
+++ b/app/views/backend/education/_unit.html.erb
@@ -11,7 +11,7 @@
 </h5>
 
 <p class="margin-tb-10"><%= education.description %></p>
-<%= link_to 'edit', edit_education_path(education), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link' } %> or
+<%= link_to 'edit', edit_education_path(education), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link' } %> <span class="or">or</span>
 <%= link_to 'remove', delete_education_path(education), method: :delete, class: 'focused-link-danger', data: { confirm: 'Are you sure? This action can not be undone.' } %>
 
 <hr>
