--- a/app/views/backend/tools/_new.html.erb
+++ b/app/views/backend/tools/_new.html.erb
@@ -9,7 +9,7 @@
   <div class="modal-body">
     <div class="form-group">
       <label>Tool:</label><span class="font-red">*</span>
-      <%= form.text_field :tool, class: 'form-control', placeholder: 'i.e. ruby or vscode', required: true %>
+      <%= form.text_field :tool, class: 'form-control', placeholder: 'i.e. ruby or vscode', required: true, autofocus: true %>
     </div>
 
     <div class="form-group">
