--- a/app/views/backend/tools/index.html.erb
+++ b/app/views/backend/tools/index.html.erb
@@ -19,7 +19,7 @@
 
 <script>
   document.addEventListener("keydown", function(event){
-    if(event.key === "n"){
+    if(event.key === "="){
       document.getElementById("new-tool").click();
     }
   });
